# kt-datacards

./: .gitignore  FEATURE-02-COMPLETION-REPORT.md  README.md  Taskfile.yml  datacards-urls.csv  datacards-urls.xlsx  output-metadata.yaml  pyproject.toml  team-mapping.yaml  test_pdf.py
archive/: hearthkyn-salvagers
config/: team-config.yaml  team-name-mapping.yaml
dev/: README-TOKENS.md  add_token_transparency.py  add_tokens_to_box.py  analyze_card_structure.py  analyze_operative_token.py  analyze_token_shapes.py  auto_rename_backsides.py  batch_rename_backsides.py  check_all_angels_pages.py  check_pdf_pages.py  check_sizes.py  check_token.py  check_token_transparency.py  copy_backsides_to_teams.py  copy_manual_backsides.py  copy_special_box_to_teams.py  create_backside_review.py  debug_angels_page4.py  debug_astartes.py  debug_blooded_equipment.py  debug_extraction_logic.py  debug_icon_extraction.py  debug_wolf_scouts.py  diagnose_failed_pdf.py  download_card_backsides.py  download_special_box_obj.py  embed_token_bag.py  extract_box_meshes.py  extract_team_icons.py  extract_tokens.py  extract_tokens_v2.py  extract_tts_preview_images.py  fix_missing_backsides.py  generate_bag_state.py  generate_display_table.py  generate_infinite_bags.py  generate_team_token_bag.py  generate_token_meshes.py  generate_tts_grid.py  generate_tts_tokens.py  (+22 more)
docs/: 00-poetry-task-setup.md  01-project-restructuring.md  02-code-refactoring.md  03-enhanced-metadata.md  04-stats-extraction.md  05-parameterized-execution.md  DEVELOPMENT.md  OUTPUT-V2-FORMAT.md  QUESTIONS.md  README.md  (+5 more)
(+273 files in other folders)
